--- a/resources/js/cart-er-admin/src/assets/scss/components/_tables.scss
+++ b/resources/js/cart-er-admin/src/assets/scss/components/_tables.scss
@@ -22,7 +22,7 @@
     vertical-align: middle;
     font-size: $default-font-size;
     line-height: 1;
-    white-space: nowrap;
+    //white-space: nowrap;
 
     img {
       max-width: 100%;
